--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
+ 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
@@ -20,8 +22,13 @@ li {
   margin: 0 0 10px 0;
 }
 
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
+img {
+  height:600px;
+}
+
+.yoga-flexbox {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
