--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-.jumbotron {
-    background-image:url("images/yoga-om.jpg");
+/* .jumbotron {
+    background-image:url("./components/images/yoga-om.jpeg");
     background-repeat: no-repeat, repeat;
     background-position: center;
     background-size: cover;
@@ -9,10 +9,10 @@
     margin-bottom: 100px;
     padding: 100px;
     border-radius: 50px;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
 }
 
 .jumbotron h1, p {
     background-color: #ffffff73;
     padding: 50px;
-}
+} */
