--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,17 @@
 /* .jumbotron {
-    background-image:url("./components/images/yoga-om.jpeg");
-    background-repeat: no-repeat, repeat;
-    background-position: center;
-    background-size: cover;
-    padding-top: 50px;
-    font-weight: bold;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    padding: 100px;
-    border-radius: 50px;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.25);
+    background: url('./components/images/yoga-om.jpeg') center center/cover no-repeat;
+    height: 100vh;
+    width: 100%
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
+    object-fit: contain;
 }
 
 .jumbotron h1, p {
-    background-color: #ffffff73;
-    padding: 50px;
+    background-color: #fff;
+    font-size: 100px;
+    margin-top: -100px;
 } */
