--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@
     font-size: 100px;
     margin-top: -100px;
 } */
+
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+  }
