--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.jumbotron {
+/* .jumbotron {
     background: url('./components/images/yogaposes.jpeg');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:left;
     background-size: cover;
     padding-top: 50px;
     font-weight: bold;
@@ -9,13 +9,14 @@
     margin-bottom: 100px;
     padding: 100px;
     border-radius: 50px;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.2);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
 }
 
 .jumbotron h1, p, h3, ul, h4 {
     background-color: #fff;
-    padding: 50px;
+    padding: 40px;
     text-align: center;
     border-radius: 50px;
-}
+} */
+
 
