--- a/src/App.css
+++ b/src/App.css
@@ -19,4 +19,7 @@
     border-radius: 50px;
 } */
 
-
+.jumbotron-holder {
+    background: url('./components/images/yogaposes.jpeg');
+    background-size: cover;
+}
