--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,10 @@
 
 @media (min-width: 800px) {
     .card-grid {
-        /* display: flex; */
-        justify-content: center;
-        /* display: grid;
-        grid-template-columns:auto auto auto auto; */
-        /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+        /* display: flex; 
+        justify-content: center; */
+        display: grid;
+        grid-template-columns:150px 150px 150px 150px 150px 150px;
         grid-gap: 16px;
     }
 }
